--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
   a {
     text-decoration: none;
-    color: black;
+    color: #222222;
   }
 }
 
@@ -20,7 +20,8 @@ body {
 
 header {
   position: sticky;
-  top: 0;
+  /* top: 0; */
+  /* opacity: 1; */
   box-shadow: -21.213px 21.213px 30px 0px rgba(158, 158, 158, 0.3);
 
   .container {
@@ -296,6 +297,71 @@ header {
       > p {
         font-size: 14px;
         margin-top: 10px;
+      }
+    }
+  }
+}
+
+#projects {
+  margin-top: 120px;
+  text-align: center;
+
+  .container > div {
+    padding-bottom: 70px;
+
+    > h1 {
+      font-size: 36px;
+      margin-bottom: 10px;
+      color: #222222;
+    }
+
+    > p {
+      font-size: 14px;
+      margin-top: 0;
+      margin-bottom: 1rem;
+      color: #777777;
+      line-height: 1.625em;
+    }
+  }
+
+  .container > #filters {
+    padding-bottom: 55px;
+    > nav > ul {
+      list-style-type: none;
+      display: flex;
+      justify-content: center;
+
+      > li > a {
+        padding: 18px 15px;
+        color: #222;
+        font-size: 12px;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .container > #filters-content {
+    margin: 0 auto;
+    max-width: 800px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    > div > div {
+      > h4 {
+        color: #222222;
+        line-height: 1.2em;
+        margin-bottom: 0;
+        margin-top: 15px;
+        font-size: 18px;
+      }
+
+      > p {
+        color: #777777;
+        font-size: 14px;
+        line-height: 1.625em;
+        margin-top: 0;
+        margin-bottom: 20px;
       }
     }
   }
