--- a/style.css
+++ b/style.css
@@ -8,6 +8,18 @@ body {
     text-decoration: none;
     color: #222222;
   }
+
+  h1 {
+    font-size: 36px;
+    color: #222222;
+    line-height: 1.2em;
+  }
+
+  p {
+    color: #777777;
+    font-size: 14px;
+    line-height: 1.625em;
+  }
 }
 
 .container {
@@ -195,7 +207,6 @@ header {
 
       > h1 {
         margin: 0 0 30px 0;
-        font-size: 36px;
         line-height: 1.2em;
       }
 
@@ -228,7 +239,6 @@ header {
   > div {
     > h1 {
       margin-bottom: 10px;
-      font-size: 36px;
       color: #222222;
       line-height: 1.2em;
       text-align: center;
@@ -342,7 +352,7 @@ header {
 
   .container > #filters-content {
     margin: 0 auto;
-    max-width: 800px;
+    max-width: 1300px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -362,6 +372,66 @@ header {
         line-height: 1.625em;
         margin-top: 0;
         margin-bottom: 20px;
+      }
+    }
+  }
+}
+
+#feedback {
+  text-align: center;
+  background-color: #f9f9ff;
+
+  .container {
+    padding-top: 80px;
+    padding-bottom: 110px;
+
+    > div {
+      > h1 {
+        margin-bottom: 10px;
+      }
+      > p {
+        margin: 0 0 1rem 0;
+        color: #777777;
+        font-size: 14px;
+        line-height: 1.625em;
+      }
+    }
+
+    > div > div {
+      padding-top: 70px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    > div > div > div {
+      margin-left: 30px;
+      text-align: left;
+      width: 550px;
+      display: flex;
+      background-color: #fff;
+      padding: 25px 30px 12px 30px;
+
+      > div > img {
+        max-width: 35px;
+      }
+
+      .comment {
+        margin-left: 30px;
+
+        > p {
+          margin-top: 0;
+        }
+
+        > h4 {
+          margin: 0 0 5px 0;
+          font-size: 18px;
+        }
+
+        > h4:hover {
+          cursor: pointer;
+          color: #8490ff;
+        }
       }
     }
   }
