--- a/style.css
+++ b/style.css
@@ -11,12 +11,10 @@ body {
 
   h1 {
     font-size: 36px;
-    color: #222222;
     line-height: 1.2em;
   }
 
   p {
-    color: #777777;
     font-size: 14px;
     line-height: 1.625em;
   }
@@ -388,6 +386,7 @@ header {
     > div {
       > h1 {
         margin-bottom: 10px;
+        color: #222222;
       }
       > p {
         margin: 0 0 1rem 0;
@@ -421,16 +420,102 @@ header {
 
         > p {
           margin-top: 0;
+          color: #777777;
         }
 
         > h4 {
           margin: 0 0 5px 0;
           font-size: 18px;
+          color: #222222;
         }
 
         > h4:hover {
           cursor: pointer;
           color: #8490ff;
+        }
+      }
+    }
+  }
+}
+
+#plan {
+  text-align: center;
+  padding: 100px 0;
+
+  > .container {
+    > div {
+      > h1 {
+        margin: 0 0 10px 0;
+        color: #222222;
+      }
+      > p {
+        margin: 0 0 1rem 0;
+        margin-top: 0;
+        color: #777777;
+      }
+    }
+
+    > #price {
+      margin-top: 100px;
+      > div {
+        display: flex;
+        flex-wrap: wrap;
+        .account-type {
+          padding: 40px 10px;
+          width: 257px;
+          background-color: #f9f9ff;
+          > div {
+            > h1 {
+              margin-top: 0;
+              margin-bottom: 0;
+              display: grid;
+              align-items: center;
+              background-color: rgba(132, 144, 255, 0.1);
+              margin-left: auto;
+              margin-right: auto;
+              border-radius: 50%;
+              width: 90px;
+              height: 90px;
+              border: 30px solid rgba(132, 144, 255, 0.1);
+            }
+
+            > h4 {
+              margin-top: 20px;
+              margin-bottom: 0;
+              font-size: 18px;
+              color: #222222;
+              line-height: 1.2em;
+            }
+
+            > p {
+              margin-bottom: 35px;
+              margin-top: 10px;
+              color: #777777;
+              line-height: 1.625em;
+            }
+
+            > h2 {
+              font-size: 36px;
+              color: #222222;
+              line-height: 1.2em !important;
+              margin-bottom: 0;
+              margin-top: 20px;
+            }
+          }
+
+          > div {
+            > ul {
+              margin: 0;
+              padding: 0;
+              list-style: none;
+
+              > li {
+                font-size: 14px;
+                padding: 10px 0;
+                border-top: 1px solid #eee;
+              }
+            }
+          }
         }
       }
     }
