--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 /* GENERAL STYLES */
 
+@font-face {
+  font-family: "Poppins";
+  src: url(fonts/Poppins-Light.ttf);
+}
+
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
@@ -62,6 +67,7 @@ header {
         position: relative;
 
         a {
+          transition-duration: 0.3s;
           padding: 8px;
           font-size: 12px;
           font-weight: bold;
@@ -168,7 +174,12 @@ header {
         margin: 0 0 26px 0;
       }
 
+      > a:hover {
+        box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);
+      }
+
       > a {
+        transition-duration: 0.5s;
         padding: 10px 30px;
         color: white;
         background: -webkit-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
@@ -214,7 +225,12 @@ header {
         line-height: 1.625em;
       }
 
+      > a:hover {
+        box-shadow: 0px 20px 20px 0px rgba(132, 144, 255, 0.3);
+      }
+
       > a {
+        transition-duration: 0.5s;
         padding: 10px 30px;
         color: white;
         background: -webkit-linear-gradient(0deg, #8490ff 0%, #62bdfc 100%);
@@ -264,6 +280,10 @@ header {
         font-size: 18px;
         color: #222222;
         line-height: 1.2em;
+      }
+
+      > a {
+        transition-duration: 0.3s;
       }
 
       > a:hover {
@@ -427,6 +447,7 @@ header {
           margin: 0 0 5px 0;
           font-size: 18px;
           color: #222222;
+          transition-duration: 0.3s;
         }
 
         > h4:hover {
@@ -526,6 +547,98 @@ header {
                 border-top: 1px solid #eee;
                 border-bottom: 1px solid #eee;
               }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+#blog {
+  padding: 90px 0;
+  text-align: center;
+  background-color: #f9f9ff;
+
+  > .container {
+    > div {
+      > p {
+        margin: 0 0 45px 0;
+        color: #777777;
+      }
+      > h1 {
+        margin: 0 0 25px 0;
+        color: #222222;
+      }
+    }
+
+    > #row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-align: left;
+
+      > .blog-item {
+        max-width: 33%;
+        padding: 0 15px;
+        cursor: pointer;
+
+        > a > h4:hover {
+          color: #8490ff;
+        }
+        > a > h4 {
+          transition-duration: 0.3s;
+          font-size: 18px;
+          color: #222222;
+          line-height: 1.2em !important;
+          margin-top: 35px;
+          margin-bottom: 0;
+          text-transform: uppercase;
+        }
+        > p {
+          margin-top: 15px;
+          margin-bottom: 45px;
+          color: #777777;
+        }
+      }
+
+      > div {
+        > div > img {
+          transition-duration: 0.3s;
+        }
+        > div > img:hover {
+          transform: scale(1.1);
+        }
+
+        .details {
+          padding: 10px 0;
+          border-bottom: 1px solid #eee;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+          .user {
+            max-width: max-content;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            > a {
+              margin-left: 15px;
+            }
+          }
+
+          .meta {
+            color: #777777;
+            > a {
+              color: #777777;
+            }
+            > span::before {
+              margin: 0 4px 0 13px;
+              content: url(imgs/icons8-heart-14.png);
+            }
+            > a::before {
+              margin: 0 4px 0 13px;
+              content: url(imgs/icons8-comment-14.png);
             }
           }
         }
